// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCard should be rendered correctly 1`] = `
<div
  className="flexCell fileCardWrapper uui-loading"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "100%",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": 0,
      "textAlign": undefined,
    }
  }
>
  <div
    className="root size-36 spacing-6 flex-row-background-none fileCardRow container align-items-top"
    style={
      Object {
        "columnGap": undefined,
        "rowGap": undefined,
      }
    }
  >
    <div
      className="container uui-icon uui-enabled root icon-container-gray60 xlsColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className="flexCell"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="uui-font-sans uui-text-gray60 root line-height-18 font-size-14 v-padding-0 fileName container"
      >
        Test
      </div>
      <div
        className="uui-font-sans uui-text-gray60 root line-height-18 font-size-14 v-padding-0 container"
      >
        XLS, 
        0 Bytes of 
        12.25 KB
      </div>
    </div>
    <div
      className="iconsBlock"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        className="root"
        height={18}
        width={18}
      >
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={3}
          stroke="#ACAFBF"
          strokeDasharray={18.84955592153876}
          strokeDashoffset={18.84955592153876}
          strokeWidth={6}
        />
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={8}
          stroke="#ACAFBF"
          strokeWidth={1}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileCard should be rendered correctly 2`] = `
<div
  className="flexCell fileCardWrapper uui-loading"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "0",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "140px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="root size-36 spacing-6 flex-row-background-none fileCardRow container align-items-top"
    style={
      Object {
        "columnGap": undefined,
        "rowGap": undefined,
      }
    }
  >
    <div
      className="container uui-icon uui-enabled root icon-container-gray60 docColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className="flexCell"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="uui-font-sans uui-text-gray60 root line-height-18 font-size-14 v-padding-0 fileName container"
      >
        Test
      </div>
      <div
        className="uui-font-sans uui-text-gray60 root line-height-18 font-size-14 v-padding-0 container"
      >
        DOC, 
        0 Bytes of 
        12.25 KB
      </div>
    </div>
    <div
      className="iconsBlock"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        className="root"
        height={18}
        width={18}
      >
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={3}
          stroke="#ACAFBF"
          strokeDasharray={18.84955592153876}
          strokeDashoffset={18.84955592153876}
          strokeWidth={6}
        />
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={8}
          stroke="#ACAFBF"
          strokeWidth={1}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileCard should be rendered correctly 3`] = `
<div
  className="flexCell fileCardWrapper"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "0",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "140px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="root size-36 spacing-6 flex-row-background-none fileCardRow container align-items-top"
    style={
      Object {
        "columnGap": undefined,
        "rowGap": undefined,
      }
    }
  >
    <div
      className="container uui-icon uui-enabled root icon-container-gray60 imgColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className="flexCell"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="uui-font-sans uui-text-gray80 root line-height-18 font-size-14 v-padding-0 fileName container"
      >
        Test
      </div>
      <div
        className="uui-font-sans uui-text-gray60 root line-height-18 font-size-14 v-padding-0 container"
      >
        GIF, 
        12.25 KB
      </div>
    </div>
    <div
      className="iconsBlock"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        className="container uui-button-box uui-enabled -clickable icon-button-gray60 root"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
